--- a/src/MyLayout.css
+++ b/src/MyLayout.css
@@ -1,12 +1,31 @@
 .list-group-item {
+  transition: box-shadow .3s;
   background: white;
   border-radius: 8px;
 }
 
+.list-group-item:hover {
+  box-shadow: 0 0 11px rgba(33,33,33,.2);
+}
+
 .bg {
   background-image: url("./bubbles.jpg");
-  height: 100vh;
+  /* Set rules to fill background */
+  min-height: 100%;
+  min-width: 1024px;
+
+  /* Set up proportionate scaling */
+  width: 100%;
+  height: auto;
+
+  /* Set up positioning */
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  /*
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  */
 }
