--- a/src/MyLayout.css
+++ b/src/MyLayout.css
@@ -11,21 +11,17 @@
 .bg {
   background-image: url("./bubbles.jpg");
   /* Set rules to fill background */
-  min-height: 100%;
+  /*min-height: 100%;
   min-width: 1024px;
-
+  */
   /* Set up proportionate scaling */
   width: 100%;
-  height: auto;
+  /*height: auto;*/
 
   /* Set up positioning */
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: -1;
-  /*
+
   background-position: center;
-  background-repeat: no-repeat;
+  /*background-repeat: no-repeat;*/
   background-size: cover;
-  */
+
 }
