--- a/src/MyLayout.css
+++ b/src/MyLayout.css
@@ -5,23 +5,28 @@
 }
 
 .list-group-item:hover {
-  box-shadow: 0 0 11px rgba(33,33,33,.2);
+  box-shadow: 0 0 11px rgba(33,33,33,.3);
 }
 
 .bg {
   background-image: url("./bubbles.jpg");
+  min-height: 100%;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
   /* Set rules to fill background */
   /*min-height: 100%;
   min-width: 1024px;
   */
   /* Set up proportionate scaling */
-  width: 100%;
+  /*width: 100%;*/
   /*height: auto;*/
 
   /* Set up positioning */
-
+  /*
   background-position: center;
-  /*background-repeat: no-repeat;*/
+  background-repeat: no-repeat;
   background-size: cover;
-
+  */
 }
