Added github link

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 
+/*
 .card {
   transition: box-shadow .3s;
   background: white;
@@ -8,6 +9,7 @@
 .card:hover {
   box-shadow: 0 0 11px rgba(33,33,33,.3);
 }
+*/
 
 .card-title {
   overflow:hidden;
